name:                cidl
version:             0.0.0.1
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2017 Richard Marko
build-type:          Simple
cabal-version:       >=1.10
category:            Embedded

data-files: support/elm/Utils.elm.template,
            support/elm/elm-package.json.template,
            support/elm/Makefile.template,
            support/ivory/Unpack.hs.template,
            support/ivory/CodeGen.hs.template,
            support/ivory/Makefile.template,
            support/tower/CodeGen.hs.template,
            support/tower/Attr.hs
            support/tower/Types.hs
            support/tower/default.conf,
            support/tower/Makefile.template,
            support/rpc/Base.hs.template,
            support/rpc/Makefile

library
  exposed-modules:     Cidl,
                       Cidl.Monad,
                       Cidl.Dict,
                       Cidl.Dict.AST,
                       Cidl.Types,
                       Cidl.Types.AST,
                       Cidl.Types.Base,
                       Cidl.Utils,
                       Cidl.Backend.Cabal,
                       --Cidl.Backend.Elm,
                       --Cidl.Backend.Elm.Common,
                       --Cidl.Backend.Elm.Dict,
                       --Cidl.Backend.Elm.Type,
                       Cidl.Backend.Haskell,
                       Cidl.Backend.Haskell.Dict,
                       Cidl.Backend.Haskell.Types,
                       Cidl.Backend.Ivory,
                       Cidl.Backend.Ivory.Types,
                       --Cidl.Backend.Rpc,
                       Cidl.Backend.Tower,
                       Cidl.Backend.Tower.Dict

  other-modules:       Paths_cidl

  build-depends:       base >=4.7 && <5,
                       base-compat >= 0.6,
                       hashable,
                       mainland-pretty,
                       parsec,
                       pretty-show,
                       transformers,
                       ivory-artifact,
                       text,
                       mtl,
                       filepath,
                       monadLib,
                       lens-family,
                       lens-family-th,
                       template-haskell,
                       directory
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable             cidl
  main-is:             Main.hs
  hs-source-dirs:      executables
  build-depends:       base >= 4.6,
                       ivory-artifact,
                       cidl

  default-language:    Haskell2010
  ghc-options:         -Wall
