cabal-version:       2.2
name:                cidl
version:             0.0.0.1
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sorki
maintainer:          srk@48.io
copyright:           2017 Sorki
build-type:          Simple
category:            Embedded

library
  exposed-modules:     Cidl,
                       Cidl.Monad,
                       Cidl.Dict,
                       Cidl.Dict.AST,
                       Cidl.Lens,
                       Cidl.Types,
                       Cidl.Types.AST,
                       Cidl.Types.Base,
                       Cidl.Types.CANOpen,
                       Cidl.Utils,
                       Cidl.Backend.Cabal,
                       Cidl.Backend.EDS,
                       Cidl.Backend.Haskell,
                       Cidl.Backend.Haskell.Dict,
                       Cidl.Backend.Haskell.Types,
                       Cidl.Backend.Ivory.Types,
                       Cidl.Backend.Tower,
                       Cidl.Backend.Tower.Dict

  build-depends:       base >=4.7 && <5,
                       data-default-class,
                       mainland-pretty,
                       pretty-show,
                       ivory-artifact,
                       lens,
                       monadLib,
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wunused-packages

executable             cidl
  main-is:             Main.hs
  hs-source-dirs:      executables
  build-depends:       base >= 4.6,
                       cidl

  default-language:    Haskell2010
  ghc-options:         -Wall
